fixed word wrap on super large merge commit messages on view commit modal

--- a/src/app/modules/projects/modals/view-commit-modal/view-commit-modal.component.scss
+++ b/src/app/modules/projects/modals/view-commit-modal/view-commit-modal.component.scss
@@ -28,6 +28,7 @@
       }
       .commit-message {
         margin-top: 5px;
+        word-wrap: break-word;
       }
 
       .commit-time {
